8202772: NMT thread stack tracking causes crashes on AIX

Reviewed-by: goetz, zgu